--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json-server": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@vueuse/core": "^13.3.0",
     "axios": "^1.10.0",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.1",
