--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.1",
+    "three": "^0.177.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
